# Lab2

./: README.md
1/: main.c
1/lib/: lib_fp_operation.h
11/: Testtree.c  map.c
2/: CMakeCache.txt  CMakeLists.txt
4/: CMakeCache.txt  CMakeLists.txt
4/lib/: lib_fp_operation.so.1.0.1
5/: strerror_use.c
5/lib/: lib_fp_operation.c  libmy_perror.c
6/: lib_myassert.h
7/: .test.txt.swp  CMakeCache.txt  CMakeLists.txt  assert_test.c
8/: Matrix.c
9/: Matrix.c
